--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h1{
     width: 100%;
     height: 50px;
     display: flex;
+    padding: 1rem;
     border-bottom: .5px solid white;
 }
 .emojiIcon{
